...
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <Spinner
                            android:id="@+id/ProductList_SortSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:spinnerMode="dropdown"
                            android:layout_weight="1" />

                        <TextView
...
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <Spinner
                            android:id="@+id/ProductList_ViewSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>

                        <TextView
                            android:layout_width="match_parent"
...
