<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/SpinnerItemHeight"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFF">

    <TextView
        android:id="@+id/SpinnerItem_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1234"
        android:textColor="#000"
        android:textSize="@dimen/tabbar_content_font_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>